# clique-old

./: .travis.yml  Cargo.toml  Dockerfile  README.md  rust-toolchain
clique-agent/: Cargo.toml
clique-agent/src/: main.rs
clique-proto/src/: lib.rs
components/agent/: Cargo.toml
components/agent/src/: main.rs
components/proto/: Cargo.toml  build.rs
components/proto/proto/: clique.proto
components/proto/src/: lib.rs
docker/: docker-compose.yml
docs/: ROADMAP.md
proto/: clique.proto
src/: acks.rs  broadcasts.rs  client.rs  codec.rs  error.rs  failure.rs  handlers.rs  lib.rs  main.rs  node.rs  peer.rs  rpc.rs  state.rs  support.rs  task.rs  transport.rs
src/rpc/: client.rs  proto.rs  server.rs
src/support/: addr.rs  sleep.rs
tests/: integrations.rs  util.rs
