[package]
name = "clique"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
description = "A SWIM based gossip library"

edition = "2018"

readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/LucioFranco/clique"

[badges]
travis-ci = { repository = "LucioFranco/clique", branch = "master" }

[dependencies]
futures = "0.1"
futures-util-preview = "0.3.0-alpha.10"
bytes = "0.4"
indexmap = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.1", features = ["async-await-preview"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4"
pretty_env_logger = "0.2"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http"  }
tower-service = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-h2"] }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-h2"] }

