[package]
name = "clique"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
description = "A SWIM based gossip agent and library"

edition = "2018"

readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/LucioFranco/clique"

[badges]
travis-ci = { repository = "LucioFranco/clique", branch = "master" }

[workspace]
members = [
    "clique-agent",
    "clique-proto"
]

[lib]
path = "src/lib.rs"

[dependencies]
futures-preview = { git = "https://github.com/LucioFranco/futures-rs", features = ["tokio-compat"] }
pin-utils = "0.1.0-alpha.3"
bytes = "0.4"
indexmap = "1.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
tokio = { version = "0.1", features = ["async-await-preview"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4"
http = "0.1"
clique-proto = { path = "clique-proto" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http"  }
tower-service = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-h2"] }
tokio-async-await-test = "0.1"
rand = "0.6"