[package]
name = "clique-proto"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.4"
prost-derive = "0.4"
bytes = "0.4"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-h2"] }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-h2"] }